--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "accuracy-direction": "node performance/accuracy/direction.js"
   },
   "dependencies": {
-    "superagent": "^6.1.0",
-    "cli-table": "^0.3.6"
+    "cli-table": "^0.3.6",
+    "lodash": "^4.17.1",
+    "moment": "^2.29.0",
+    "qs": "^6.10.0",
+    "superagent": "^6.1.0"
   }
 }
