--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.1",
     "moment": "^2.29.0",
     "qs": "^6.10.0",
-    "superagent": "^6.1.0"
+    "superagent": "^6.1.0",
+    "underscore": "^1.13.0"
   }
 }
