--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "qs": "^6.10.1",
+    "react": "^17.0.2",
     "superagent": "^6.1.0",
     "underscore": "^1.13.0"
   }
