--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
     "react": "^17.0.0",
     "superagent": "^6.1.0",
     "underscore": "^1.13.0"
+  },
+  "devDependencies": {
+    "@types/cli-table": "^0.3.0",
+    "@types/lodash": "^4.14.170",
+    "@types/qs": "^6.9.7",
+    "@types/react": "^17.0.11",
+    "@types/superagent": "^4.1.11",
+    "@types/underscore": "^1.11.3"
   }
 }
