--- a/package.json
+++ b/package.json
@@ -10,20 +10,6 @@
   },
   "dependencies": {
     "cli-table": "^0.3.6",
-    "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "qs": "^6.10.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.0",
-    "superagent": "^6.1.0",
-    "underscore": "^1.13.0"
-  },
-  "devDependencies": {
-    "@types/cli-table": "^0.3.0",
-    "@types/lodash": "^4.14.172",
-    "@types/qs": "^6.9.7",
-    "@types/react": "^17.0.19",
-    "@types/superagent": "^4.1.12",
-    "@types/underscore": "^1.11.3"
+    "superagent": "^6.1.0"
   }
 }
